Fix gap

--- a/frontend/src/pages/roles/components/roles-table.module.scss
+++ b/frontend/src/pages/roles/components/roles-table.module.scss
@@ -28,7 +28,6 @@
 
     .table-filters {
         display: flex;
-        margin-top: 24px;
         gap: globals.$column-gap-m;
     }
 }
